# smart-city-hackathon-magdeburg

./: .gitignore  CLAUDE.md  DEMO_README.md  Dockerfile  LLM_README.md  README.md  pyproject.toml
.github/workflows/: build.yaml
app/: agent.py  data_loader.py  data_processor.py  env.py  llm_provider.py  main.py  rag_query.py
app/templates/: base.html  chat.html  dashboard.html  demographics.html  economy.html  environment.html  index.html  living.html  mobility.html  quality.html
app/tools/: __init__.py  accidents.py  air_quality.py  cafes.py  climate.py  economy.py  events.py  health.py  mobility.py  population.py  rag_tool.py  rent.py  tax.py  transit.py  trees.py  water_level.py  weather.py  web_search.py
data/Baumkataster/: README.md
data/CafesOSM/: CafesOSM.geojson  README.md
data/OEV-Daten_NASA_GmbH/: readme.md
data/Stabstelle Klima/: Energieverbrauch und Emissionen CO2_1.xlsx  LED-Umrüstung Straßenlaternen.xlsx  Strom aus solare Strahlungsenergie_1.xlsx  energy_emissions.json  led_streetlights.json  parse_climate_data.py  solar_energy.json
data/Stadtteile/: Stadtteile.geojson
data/Unfaelle/: Magdeburg_Unfallatlas.geojson  README.md
data/Zensus/: README.md  ZensusBev.geojson  ZensusMiete.geojson
data/kiss-md/: README.en.md  README.md  index.json
data/live-sources/: DATENQUELLEN.en.md  DATENQUELLEN.md
data/mietspiegel-2024/: README.en.md  README.md  index.json  nach-baualter.json  nach-wohnflaeche.json
data/rag/: HACKATHON_README.md  RAG_PIPELINE_PLAN.md  README.en.md  README.md  compose.yaml  download_log.json  download_pdfs.py  (+1 more)
(+842 files in other folders)
