[project]
name = "md-hackathon-dashboard"
version = "0.1.0"
description = "FastAPI dashboard with Jinja2 templates"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "jinja2>=3.1",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]